--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chartkick": "5.0.1",
     "color-hash": "2.0.2",
     "color-string": "1.9.1",
+    "core-js": "3.42.0",
     "fabric": "cgwire/fabric.js",
     "lucide-vue-next": "0.510.0",
     "marked": "14.1.4",
