--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [18, 20, 22, current]
+        node: [20, 22, current]
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
