--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,6 +11,11 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: current
+          cache: 'npm'
       - name: Update Kitsu on staging server
         uses: appleboy/ssh-action@v1
         env:
