--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vuepic/vue-datepicker": "11.0.2",
     "async": "3.2.6",
     "bowser": "2.11.0",
+    "bulma": "0.3.1",
     "chart.js": "4.5.0",
     "chartkick": "5.0.1",
     "color-hash": "2.0.2",
