Update vite version to ^5.0.0
Updated vite dependency version in package.json.

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prettier": "3.6.2",
     "sass": "1.93.2",
     "vite": "7.1.12",
+    "vite": "^5.0.0"
     "vitest": "4.0.3",
     "vitest-localstorage-mock": "0.1.2"
   },
