[schedule] allow exporting the production schedule as an Excel file

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "color-hash": "2.0.2",
     "color-string": "1.9.1",
     "core-js": "3.47.0",
+    "exceljs": "4.4.0",
     "fabric": "cgwire/fabric.js",
+    "file-saver": "2.0.5",
     "lucide-vue-next": "0.554.0",
     "marked": "16.4.2",
     "marked-emoji": "2.0.2",
