--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@animxyz/vue3": "0.6.7",
-    "@arch-inc/fabricjs-psbrush": "0.0.20",
     "@fullcalendar/core": "6.1.19",
     "@fullcalendar/daygrid": "6.1.19",
     "@fullcalendar/multimonth": "6.1.19",
@@ -39,6 +38,7 @@
     "core-js": "3.47.0",
     "exceljs": "4.4.0",
     "fabric": "cgwire/fabric.js",
+    "fabricjs-psbrush": "cgwire/fabricjs-psbrush",
     "file-saver": "2.0.5",
     "lucide-vue-next": "0.562.0",
     "marked": "17.0.1",
