--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "format": "prettier --write --list-different src/**/*.{js,vue}",
-    "lint": "eslint --ext .js,.vue src/",
+    "lint": "eslint src/",
     "lint:fix": "npm run lint -- --fix",
     "preview": "vite preview",
     "test": "npm run test:unit",
@@ -71,14 +71,16 @@
     "wavesurfer.js": "7.11.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.39.2",
     "@vitejs/plugin-vue": "6.0.3",
     "@vue/compiler-sfc": "3.5.13",
     "@vue/test-utils": "2.4.6",
     "autoprefixer": "10.4.23",
-    "eslint": "8.57.1",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.5",
-    "eslint-plugin-vue": "9.33.0",
+    "eslint-plugin-vue": "10.7.0",
+    "globals": "17.0.0",
     "esm": "3.2.25",
     "husky": "9.1.7",
     "jsdom": "27.4.0",
@@ -88,7 +90,8 @@
     "sass": "1.97.2",
     "vite": "7.3.1",
     "vitest": "4.0.17",
-    "vitest-localstorage-mock": "0.1.2"
+    "vitest-localstorage-mock": "0.1.2",
+    "vue-eslint-parser": "10.2.0"
   },
   "engines": {
     "node": ">=20.19"
