[qa] fix minimum npm version
Node.js 20.x includes npm 10.x by default

--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "vue-eslint-parser": "10.2.0"
   },
   "engines": {
-    "node": ">=20.19"
+    "node": ">=20.19",
+    "npm": ">=10"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint --cache"
