--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-vue": "10.7.0",
     "globals": "17.0.0",
     "husky": "9.1.7",
